kubernetes/01_postgres_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:11.2-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
