kubernetes/04_spring_boot_basics_service.yml
apiVersion: v1
kind: Service
metadata:
  name: basics
spec:
  selector:
    app: basics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
