kubernetes/05_spring_boot_basics_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basics
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: basics
              servicePort: 80
